2015-10-09  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #70592: Fix deprecated TCA specification for select fields

2015-10-09  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #70541: Warning: Ambiguous class resolution, because of two ext_update definitions
	* Update version to 6.3.1	

2015-10-01  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #59834: Always run the extension update script except on first install of base extension
	* Resolves #59834: Follow-up to Always run the extension update script
	* Update version to 6.3.0

2015-09-30  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #70224: Import SQL parser for Dbal-free parsing with TYPO3 CMS 7.5+
	* Resolves #70225: Add composer.json to extension and language pack template
	* Resolves #70228: Delete old language files
	* Resolves #70231: Delete translation files from extension
	* Resolves #70235: Move static template registration to TCA/Overrides
	* Resolves #70239: Adapt to new TCA configuration and backend Form Engine API of TYPO3 CMS 7
	* Resolves #70240: !!! Remove class tx_staticinfotables_div
	* Resolves #70241: Remove reference to removed method
	* Update the manual
	* Resolves #70240: Follow-up to Remove class tx_staticinfotables_div
	* Resolves #66011: Fatal error when executing update script
	* Resolves #70224: Follow-up to Import SQL parser for Dbal-free parsing with TYPO3 CMS 7.5+
	* Resolves #69133: Avoid exception if a class is loaded early

2015-09-14  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #67998: Increase maxitems for cn_country_zones in TCA
	* Resolves #67677: Problems in Typo3 CMS 7.3
	* Resolves #67161: Incorrect mapping for field 'deleted'
	* Resolves #66484: Missing TCA option in manual example

2015-02-10  Oliver Klee <typo3-coding@oliverklee.de>

	* Resolves #64135: Block any write access to the static models

2015-02-10  Stanislas Rolland  <typo3@sjbr.ca>

	* Escape some backslashes in class names
	* Resolves #64945: Error when installing on 7.1