@@ -1,42 +1,25 @@
 <?php
-########################################################################
-# Extension Manager/Repository config file for ext: "static_info_tables_###LANG_ISO_LOWER###"
-#
-# Auto generated 20-07-2005 12:06
-#
-# Manual updates:
-# Only the data in the array - anything else is removed by next write
-########################################################################
-$EM_CONF[$_EXTKEY] = Array (
+/**
+ * Extension Manager configuration file for ext "static_info_tables_###LANG_ISO_LOWER###"
+ */
+$EM_CONF[$_EXTKEY] = array(
 	'title' => 'Static Info Tables (###LANG_ISO_LOWER###)',
 	'description' => '###LANG_NAME### (###LANG_ISO_LOWER###) language pack for the Static Info Tables providing localized names for countries, currencies and so on.',
 	'category' => 'misc',
-	'shy' => 0,
 	'version' => '###VERSION###',
-	'priority' => '',
-	'loadOrder' => '',
-	'module' => '',
 	'state' => 'stable',
 	'uploadfolder' => 0,
 	'createDirs' => '',
-	'modify_tables' => '',
-	'clearcacheonload' => 1,
-	'lockType' => '',
+	'clearCacheOnLoad' => 0,
 	'author' => '###AUTHOR###',
 	'author_email' => '###AUTHOR_EMAIL###',
 	'author_company' => '###AUTHOR_COMPANY###',
-	'CGLcompliance' => '',
-	'CGLcompliance_note' => '',
-	'constraints' => array (
+	'constraints' => array(
 		'depends' => array(
 			'typo3' => '###TYPO3_VERSION_RANGE###',
-			'static_info_tables' => '###VERSION_BASE###-',
+			'static_info_tables' => '###VERSION_BASE###-'
 		),
-		'conflicts' => array(
-		),
-		'suggests' => array(
-		),
-	),
-	'_md5_values_when_last_written' => '',
+		'conflicts' => array(),
+		'suggests' => array()
+	)
 );
-?>
