@@ -1,6 +1,7 @@
 2015-10-09  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Resolves #70592: Fix deprecated TCA specification for select fields
+	* Resolves #70593: Cleanup ext_emconf.php
 
 2015-10-09  Stanislas Rolland  <typo3@sjbr.ca>
 
